# medici

./: INSTALL  Makefile.in  README  README.md  config.h.in  configure  configure.ac
EDI-Parser/: Changes  MANIFEST  Makefile.PL  Parser.pm  Parser.xs  README  test.pl
doc/: Makefile.in  iso9735.txt  medici.xml  telesmart.txt
examples/: Makefile.in  describe.c  edisplit.c  editoxml.c  elements.c  expyx.c  expyx.h  medici.cc  pyxtest.c  telesmart.c  tokens.c  xmlout.c  xmlout.h  xmltsg.c  xmltsg.h
samples/: 210x12.edi  837x12.edi  840x12.edi  850x12.edi  dom_coll.edi  dom_delv.edi  int_coll.edi  int_delv.edi  invtax.edi  mailack.edi  orders.edi  postack.edi  pricat.edi  priinf.edi  sessack.edi
src/: Doxyfile  Makefile.in  adt.c  adt.h  ascii.h  common.c  common.h  drctry.c  drctry.h  edifact.c  edifact.h  frncsc.c  frncsc.h  fsa.fsa  giovanni.c  giovanni.h  imp.c  imp.h  internal.h  medici.c  medici.h  parser.c  parser.h  prmtrs.c  prmtrs.h  segment.c  segment.h  token.c  token.h  ungtdi.c  ungtdi.h  x12.c  x12.h
tsg/: edifact.xml  telesmart.xml  tradacom.xml  tsg.dtd  ungtdi.xml  x12.xml
util/: eif2xml  fsa2c  gxml2t  telesmart.pl  txt2xml  untd2t  unzipdirs  xml2c  xmltoedi.c
